--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
 <body>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="scripts/hexagon.js"></script>
     <script src="scripts/sketch.js"></script>
 </body>
 
 </html>
-
